--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'maven'
 }
 
 android {
@@ -41,4 +42,9 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // https://github.com/prolificinteractive/material-calendarview
+    // for the weekly calendar view in dashboard
+    implementation ("com.github.prolificinteractive:material-calendarview:2.0.0")
+
 }
