--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StudentLife">
         <activity
-            android:name=".ui.todolist.Toedit"
-            android:parentActivityName=".ui.todolist.Toedit"></activity>
+            android:name=".ui.todolist.Toupdate"
+            android:parentActivityName=".ui.todolist.Toupdate"></activity>
 
-        <activity
-            android:name=".ui.todolist.Toadd"
-            android:parentActivityName=".ui.todolist.Toadd"></activity>
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
