--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
             android:parentActivityName=".ui.todolist.Toupdate"></activity>
 
         <activity
+            android:name=".ui.calendar.CalendarToUpdate"
+            android:parentActivityName=".ui.calendar.CalendarToUpdate"></activity>
+
+        <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
